feat: Enhance dashboard UI and integrate MCP/RAG agents
- UI: Refactor dashboard toolbar for responsiveness and reduced clutter
- UI: Improve preview toggle logic and history view functionality
- UI: Remove duplicate branding
- Backend: Add KnowledgeBase, RagAgent, and MCPServers for RAG capabilities
- Backend: Update orchestrator and app routes for AI integration

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,15 @@ nltk
 mcp
 daytona-sdk
 gunicorn
+langgraph
+langchain
+langchain-community
+langchain-core
+langchain-text-splitters
+langchain-ollama
+langchain-chroma
+chromadb
+unstructured
+beautifulsoup4
+validators
+pypdf
